Added Custom Models and cleaned up scripts

--- a/notebooks/GloVe.ipynb
+++ b/notebooks/GloVe.ipynb
@@ -2,40 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from gensim.models import Word2Vec\n",
     "import pandas as pd\n",
     "from nltk.tokenize import WordPunctTokenizer\n",
-    "import contractions\n",
-    "from gensim.models import KeyedVectors"
+    "from gensim.models import KeyedVectors\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_glove_model(glove_file_path):\n",
     "    glove_model = KeyedVectors.load_word2vec_format(glove_file_path, binary=False, no_header=True)\n",
-    "    return glove_model"
+    "    return glove_model\n",
+    "\n",
+    "def combine_columns(row):\n",
+    "    return row['dialogue'] + ' ' + row['summary']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer = WordPunctTokenizer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,17 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tokenize(text):\n",
-    "    text = contractions.fix(text)\n",
-    "    tokens = tokenizer.tokenize(text)\n",
-    "    clean_tokens = []\n",
+    "tokenizer = WordPunctTokenizer()\n",
+    "\n",
+    "with open('../data/contractions.json', 'r') as f:\n",
+    "    contractions = json.load(f)\n",
+    "\n",
+    "def fix_contractions(text):\n",
+    "    tokens = text.split()\n",
+    "    cleaned = []\n",
     "    for token in tokens:\n",
-    "        clean_tokens.append(token)\n",
-    "    text = ' '.join(clean_tokens).lower()\n",
+    "        cleaned.append(contractions.get(token, token))\n",
+    "    return ' '.join(cleaned)\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    text = fix_contractions(text)\n",
+    "    tokens = tokenizer.tokenize(text)\n",
+    "    text = ' '.join(tokens).lower()\n",
     "    text = text.replace('# person1 #', '#person1#')\n",
     "    text = text.replace('# person2 #', '#person2#')\n",
     "    text = text.replace('# person3 #', '#person3#')\n",
@@ -67,21 +70,32 @@
     "    text = text.replace(' ?', '?')\n",
     "    text = text.replace(' !', '!')\n",
     "    text = text.replace(\" ' \", \"'\")\n",
+    "    text = text.replace(\"< \", \"<\")\n",
+    "    text = text.replace(\" >\", \">\")\n",
     "    return text.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "concat = pd.concat([train['dialogue'], train['summary']])"
+    "train['summary'] = train['summary'].apply(lambda x: '<SOS> ' + x + ' <EOS>')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concat = train.apply(combine_columns, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,25 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('name?', 0.20081743597984314),\n",
-       " ('pale.', 0.1952628791332245),\n",
-       " ('francisco', 0.1833544671535492),\n",
-       " ('flu.', 0.1742691844701767),\n",
-       " ('duties', 0.17293964326381683),\n",
-       " ('won', 0.1703324317932129),\n",
-       " ('mom.', 0.16947486996650696),\n",
-       " ('university.', 0.16828463971614838),\n",
-       " ('drama', 0.16771653294563293),\n",
-       " ('early.', 0.16720540821552277)]"
+       "[('will,', 0.19918687641620636),\n",
+       " ('big,', 0.18685618042945862),\n",
+       " ('across', 0.1850905865430832),\n",
+       " ('admires', 0.1844509094953537),\n",
+       " ('april', 0.17851804196834564),\n",
+       " ('break.', 0.17759983241558075),\n",
+       " ('article', 0.17517882585525513),\n",
+       " ('no', 0.17481420934200287),\n",
+       " ('fever.', 0.17363373935222626),\n",
+       " ('(', 0.17225077748298645)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,25 +155,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tells', 0.6852829456329346),\n",
-       " ('asks', 0.6342537999153137),\n",
-       " ('suggests', 0.5803223848342896),\n",
-       " ('#person2#', 0.5709367394447327),\n",
-       " ('recommends', 0.5490970015525818),\n",
-       " ('thinks', 0.538934588432312),\n",
-       " ('advises', 0.530464768409729),\n",
-       " ('#person1#.', 0.5236577391624451),\n",
-       " ('complains', 0.5215713977813721),\n",
-       " ('wants', 0.5100038051605225)]"
+       "[('tells', 0.668127179145813),\n",
+       " ('asks', 0.6325467228889465),\n",
+       " ('#person2#', 0.5329562425613403),\n",
+       " ('wants', 0.5291920304298401),\n",
+       " ('suggests', 0.5121132135391235),\n",
+       " ('thinks', 0.5016119480133057),\n",
+       " ('recommends', 0.49962735176086426),\n",
+       " ('<sos>', 0.4889325201511383),\n",
+       " ('advises', 0.4694846272468567),\n",
+       " ('complains', 0.4649205505847931)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,25 +194,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('#person2#', 0.8051125407218933),\n",
-       " ('#person3#', 0.5365425944328308),\n",
-       " ('sam', 0.5109261870384216),\n",
-       " ('jeff', 0.4995196461677551),\n",
-       " ('#person2#.', 0.4818013310432434),\n",
-       " ('amy', 0.47963079810142517),\n",
-       " ('#person2#,', 0.4759983420372009),\n",
-       " ('#person1#.', 0.4756500720977783),\n",
-       " ('#person1#,', 0.47492074966430664),\n",
-       " ('chris', 0.4728524088859558)]"
+       "[('#person2#', 0.714061975479126),\n",
+       " ('sam', 0.6278362274169922),\n",
+       " ('mary', 0.6145195364952087),\n",
+       " ('#person3#', 0.6067740321159363),\n",
+       " ('lucy', 0.5954647064208984),\n",
+       " ('mike', 0.595004141330719),\n",
+       " ('jeff', 0.5943966507911682),\n",
+       " ('jack', 0.5858264565467834),\n",
+       " ('george', 0.5835283994674683),\n",
+       " ('amy', 0.5760015845298767)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
