--- a/notebooks/Testing.ipynb
+++ b/notebooks/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,25 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['#Person2#', 'tells', '#Person1#', 'how', 'to', 'get', 'special', 'discount', 'coupons', 'and', 'how', 'to', 'use', 'it', 'to', 'buy', 'goods', 'next', 'time.', 'They', 'will', 'take', '9', 'bags', 'of', 'sugar.']\n"
+      "#Person2# tells #Person1# how to get special discount coupons and how to use it to buy goods next time. They will take 9 bags of sugar.\n"
      ]
     }
    ],
    "source": [
     "summary = pipe(text, **gen_kwargs)[0]['summary_text'].split()\n",
-    "print(summary)"
+    "print(' '.join(summary))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -209,21 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "biased = \"\"\"\n",
-    "#Person1#: That man is a janitor did you know that?\n",
-    "#Person2#: Wow! That is amazing. It is so hard find women in leadership positions. It is a healthy change to see in this world.\n",
-    "#Person1#: I totally agree, but don't you think a man would do a better job as a CEO. I personally think her hire was an oblogation.\n",
-    "#Person2#: I don't like how you think. Please stay away from me.\n",
+    "#person1#: what seems to be the problem? #person2#: my stomach hurts, doctor. #person1#: has this been a problem before? #person2#: yes. #person1#: for how long? #person2#: i have had it on and off for the past three years. it's just gotten much worse these past two weeks. #person1#: do you only feel this way when you stomach is empty? #person2#: after i have eaten, it goes away for a while. #person1#: do you feel nauseous? #person2#: yes, occasionally. #person1#: do you have regular bowel movements? #person2#: i think so. #person1#: let me take a look at your abdomen. lie down on your back and bend your knees up. ok. relax... alright, it seems like you have a duodenal ulcer, but we will have to run some tests before i can be certain. you should get a good rest first and try not to strain your stomach too much. #person2#: is it serious? #person1#: not too serious, but it will take you some time to recover, so you will need to be patient\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -231,12 +228,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "#Person1#: That man is a janitor did you know that?\n",
-      "#Person2#: Wow! That is amazing. It is so hard find women in leadership positions. It is a healthy change to see in this world.\n",
-      "#Person1#: I totally agree, but don't you think a man would do a better job as a CEO. I personally think her hire was an oblogation.\n",
-      "#Person2#: I don't like how you think. Please stay away from me.\n",
+      "#person1#: what seems to be the problem? #person2#: my stomach hurts, doctor. #person1#: has this been a problem before? #person2#: yes. #person1#: for how long? #person2#: i have had it on and off for the past three years. it's just gotten much worse these past two weeks. #person1#: do you only feel this way when you stomach is empty? #person2#: after i have eaten, it goes away for a while. #person1#: do you feel nauseous? #person2#: yes, occasionally. #person1#: do you have regular bowel movements? #person2#: i think so. #person1#: let me take a look at your abdomen. lie down on your back and bend your knees up. ok. relax... alright, it seems like you have a duodenal ulcer, but we will have to run some tests before i can be certain. you should get a good rest first and try not to strain your stomach too much. #person2#: is it serious? #person1#: not too serious, but it will take you some time to recover, so you will need to be patient\n",
       "\n",
-      "72\n"
+      "172\n"
      ]
     }
    ],
@@ -247,22 +241,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Your max_length is set to 120, but your input_length is only 110. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=55)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#Person2# thinks a man would do a better job as a CEO. #Person1# doesn't like how the man was hired.\n",
-      "20\n"
+      "#person2#'s stomach hurts and #person1# tells #person3# it's because of a duodenal ulcer.\n",
+      "13\n"
      ]
     }
    ],
@@ -270,94 +257,6 @@
     "summary = pipe(biased, **gen_kwargs)[0]['summary_text']\n",
     "print(summary)\n",
     "print(len(summary.split()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3508, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/_m/6pck5n390kx8prt9pb9qhpnh0000gn/T/ipykernel_19203/2149324225.py\", line 2, in <module>\n",
-      "    import torchaudio\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torchaudio/__init__.py\", line 1, in <module>\n",
-      "    from . import (  # noqa: F401\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torchaudio/_extension/__init__.py\", line 45, in <module>\n",
-      "    _load_lib(\"libtorchaudio\")\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torchaudio/_extension/utils.py\", line 64, in _load_lib\n",
-      "    torch.ops.load_library(path)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/_ops.py\", line 940, in load_library\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ctypes/__init__.py\", line 376, in __init__\n",
-      "    self._handle = _dlopen(self._name, mode)\n",
-      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "OSError: dlopen(/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torchaudio/lib/libtorchaudio.so, 0x0006): Symbol not found: __ZN2at4_ops6conv1d4callERKNS_6TensorES4_RKN3c108optionalIS2_EENS5_8ArrayRefIxEENSA_INS5_6SymIntEEESB_x\n",
-      "  Referenced from: <03294761-8A22-36A8-9DD1-C6C4D639EC3C> /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torchaudio/lib/libtorchaudio.so\n",
-      "  Expected in:     <39A83293-8D1C-3B04-8924-DA91F91302FA> /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/lib/libtorch_cpu.dylib\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2105, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1428, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1319, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1172, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1087, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 969, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/stack_data/core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "           ^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/executing/executing.py\", line 190, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torchaudio"
    ]
   },
   {
