--- a/notebooks/BART.ipynb
+++ b/notebooks/BART.ipynb
@@ -640,6 +640,21 @@
         ")\n",
         "\n",
         "trainer = Trainer(model=model, args=training_args, tokenizer=tokenizer, data_collator=data_collator,\n",
+        "                  train_dataset = diasum_pt['train'], eval_dataset = diasum_pt['validation'])training_args = TrainingArguments(\n",
+        "    output_dir = 'bart_diasum',\n",
+        "    num_train_epochs=1,\n",
+        "    warmup_steps = 500,\n",
+        "    per_device_train_batch_size=4,\n",
+        "    per_device_eval_batch_size=4,\n",
+        "    weight_decay = 0.01,\n",
+        "    logging_steps = 10,\n",
+        "    evaluation_strategy = 'steps',\n",
+        "    eval_steps=500,\n",
+        "    save_steps=1e6,\n",
+        "    gradient_accumulation_steps=16\n",
+        ")\n",
+        "\n",
+        "trainer = Trainer(model=model, args=training_args, tokenizer=tokenizer, data_collator=data_collator,\n",
         "                  train_dataset = diasum_pt['train'], eval_dataset = diasum_pt['validation'])"
       ]
     },
