Changed GloVe extraction

--- a/notebooks/GloVe.ipynb
+++ b/notebooks/GloVe.ipynb
@@ -2,20 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from gensim.models import Word2Vec\n",
-    "import pandas as pd\n",
-    "from nltk.tokenize import WordPunctTokenizer\n",
-    "from gensim.models import KeyedVectors\n",
-    "import json"
+    "from gensim.models import KeyedVectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,88 +20,25 @@
     "    glove_model = KeyedVectors.load_word2vec_format(glove_file_path, binary=False, no_header=True)\n",
     "    return glove_model\n",
     "\n",
-    "def combine_columns(row):\n",
-    "    return row['dialogue'] + ' ' + row['summary']"
+    "def get_corpus():\n",
+    "    with open(\"../data/processed/corpus\", \"r\") as f:\n",
+    "        sentences = f.readlines()\n",
+    "    return sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_json('../data/raw/dialogsum/dialogsum.train.jsonl', lines = True)[['dialogue', 'summary']]"
+    "sentences = get_corpus()\n",
+    "tokens = [sent.split() for sent in sentences]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer = WordPunctTokenizer()\n",
-    "\n",
-    "with open('../data/contractions.json', 'r') as f:\n",
-    "    contractions = json.load(f)\n",
-    "\n",
-    "def fix_contractions(text):\n",
-    "    tokens = text.split()\n",
-    "    cleaned = []\n",
-    "    for token in tokens:\n",
-    "        cleaned.append(contractions.get(token, token))\n",
-    "    return ' '.join(cleaned)\n",
-    "\n",
-    "def tokenize(text):\n",
-    "    text = fix_contractions(text)\n",
-    "    tokens = tokenizer.tokenize(text)\n",
-    "    text = ' '.join(tokens).lower()\n",
-    "    text = text.replace('# person1 #', '#person1#')\n",
-    "    text = text.replace('# person2 #', '#person2#')\n",
-    "    text = text.replace('# person3 #', '#person3#')\n",
-    "    text = text.replace('# person4 #', '#person4#')\n",
-    "    text = text.replace('# person5 #', '#person5#')\n",
-    "    text = text.replace('# person6 #', '#person6#')\n",
-    "    text = text.replace('# person7 #', '#person7#')\n",
-    "    text = text.replace(' ,', ',')\n",
-    "    text = text.replace(' .', '.')\n",
-    "    text = text.replace(' ?', '?')\n",
-    "    text = text.replace(' !', '!')\n",
-    "    text = text.replace(\" ' \", \"'\")\n",
-    "    text = text.replace(\"< \", \"<\")\n",
-    "    text = text.replace(\" >\", \">\")\n",
-    "    return text.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train['summary'] = train['summary'].apply(lambda x: '<SOS> ' + x + ' <EOS>')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concat = train.apply(combine_columns, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokens = list(concat.apply(lambda x : tokenize(x)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +67,7 @@
        " ('(', 0.17225077748298645)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +107,7 @@
        " ('complains', 0.4649205505847931)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,25 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('#person2#', 0.714061975479126),\n",
-       " ('sam', 0.6278362274169922),\n",
-       " ('mary', 0.6145195364952087),\n",
-       " ('#person3#', 0.6067740321159363),\n",
-       " ('lucy', 0.5954647064208984),\n",
-       " ('mike', 0.595004141330719),\n",
-       " ('jeff', 0.5943966507911682),\n",
-       " ('jack', 0.5858264565467834),\n",
-       " ('george', 0.5835283994674683),\n",
-       " ('amy', 0.5760015845298767)]"
+       "[('#person2#', 0.7208516597747803),\n",
+       " ('sam', 0.6329665184020996),\n",
+       " ('mike', 0.5963233709335327),\n",
+       " ('#person3#', 0.5918983221054077),\n",
+       " ('jeff', 0.5866713523864746),\n",
+       " ('mary', 0.5842511653900146),\n",
+       " ('alice', 0.5810478925704956),\n",
+       " ('jack', 0.5808283090591431),\n",
+       " ('julie', 0.5800818204879761),\n",
+       " ('amy', 0.577274739742279)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
