Updated GloVe Embedding

--- a/notebooks/GloVe.ipynb
+++ b/notebooks/GloVe.ipynb
@@ -21,7 +21,7 @@
     "    return glove_model\n",
     "\n",
     "def get_corpus():\n",
-    "    with open(\"../data/processed/corpus\", \"r\") as f:\n",
+    "    with open(\"../data/processed/glove_corpus\", \"r\") as f:\n",
     "        sentences = f.readlines()\n",
     "    return sentences"
    ]
@@ -55,16 +55,16 @@
     {
      "data": {
       "text/plain": [
-       "[('will,', 0.19918687641620636),\n",
-       " ('big,', 0.18685618042945862),\n",
-       " ('across', 0.1850905865430832),\n",
-       " ('admires', 0.1844509094953537),\n",
-       " ('april', 0.17851804196834564),\n",
-       " ('break.', 0.17759983241558075),\n",
-       " ('article', 0.17517882585525513),\n",
-       " ('no', 0.17481420934200287),\n",
-       " ('fever.', 0.17363373935222626),\n",
-       " ('(', 0.17225077748298645)]"
+       "[('perfect!', 0.19918687641620636),\n",
+       " ('peking', 0.18685618042945862),\n",
+       " ('speaking', 0.1850905865430832),\n",
+       " ('inside.', 0.1844509094953537),\n",
+       " ('chinese.', 0.17851804196834564),\n",
+       " ('24', 0.17759983241558075),\n",
+       " ('cake', 0.17517882585525513),\n",
+       " ('help', 0.17481420934200287),\n",
+       " ('education.', 0.17363373935222626),\n",
+       " ('test', 0.17225077748298645)]"
       ]
      },
      "execution_count": 5,
@@ -95,16 +95,16 @@
     {
      "data": {
       "text/plain": [
-       "[('tells', 0.668127179145813),\n",
-       " ('asks', 0.6325467228889465),\n",
-       " ('#person2#', 0.5329562425613403),\n",
-       " ('wants', 0.5291920304298401),\n",
-       " ('suggests', 0.5121132135391235),\n",
-       " ('thinks', 0.5016119480133057),\n",
-       " ('recommends', 0.49962735176086426),\n",
-       " ('<sos>', 0.4889325201511383),\n",
-       " ('advises', 0.4694846272468567),\n",
-       " ('complains', 0.4649205505847931)]"
+       "[('tells', 0.5800400376319885),\n",
+       " ('asks', 0.5097846984863281),\n",
+       " ('#person2#', 0.44948500394821167),\n",
+       " ('thinks', 0.4351900815963745),\n",
+       " ('suggests', 0.42950737476348877),\n",
+       " ('<sos>', 0.40993642807006836),\n",
+       " ('recommends', 0.4068792760372162),\n",
+       " ('s', 0.3993434011936188),\n",
+       " (\"#person2#'\", 0.3977951109409332),\n",
+       " ('wants', 0.3972680866718292)]"
       ]
      },
      "execution_count": 7,
@@ -134,16 +134,16 @@
     {
      "data": {
       "text/plain": [
-       "[('#person2#', 0.7208516597747803),\n",
-       " ('sam', 0.6329665184020996),\n",
-       " ('mike', 0.5963233709335327),\n",
-       " ('#person3#', 0.5918983221054077),\n",
-       " ('jeff', 0.5866713523864746),\n",
-       " ('mary', 0.5842511653900146),\n",
-       " ('alice', 0.5810478925704956),\n",
-       " ('jack', 0.5808283090591431),\n",
-       " ('julie', 0.5800818204879761),\n",
-       " ('amy', 0.577274739742279)]"
+       "[('#person2#', 0.7265139818191528),\n",
+       " ('sam', 0.663916289806366),\n",
+       " ('kate', 0.624889075756073),\n",
+       " ('#person3#', 0.6135007739067078),\n",
+       " ('mike', 0.6108843684196472),\n",
+       " ('shirley', 0.5966283082962036),\n",
+       " ('jack', 0.5953760743141174),\n",
+       " ('alice', 0.5870617032051086),\n",
+       " ('ann', 0.5827251672744751),\n",
+       " ('lucy', 0.5810714364051819)]"
       ]
      },
      "execution_count": 9,
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
