--- a/notebooks/build_corpus.ipynb
+++ b/notebooks/build_corpus.ipynb
@@ -61,7 +61,32 @@
     "    corpus = '\\n'.join(corpus)\n",
     "\n",
     "    with open(\"../data/processed/corpus\", \"w\") as f:\n",
-    "        f.write(corpus)\n"
+    "        f.write(corpus)\n",
+    "\n",
+    "    dev = pd.read_json(\n",
+    "        '../data/raw/dialogsum/dialogsum.dev.jsonl', lines=True)\n",
+    "    dev['summary'] = dev['summary'].apply(\n",
+    "        lambda x: '<SOS> ' + x + ' <EOS>')\n",
+    "\n",
+    "    dev_corpus = dev.apply(combine_columns, axis=1)\n",
+    "    dev_corpus = list(map(tokenize, corpus))\n",
+    "    dev_corpus = '\\n'.join(corpus)\n",
+    "\n",
+    "    test = pd.read_json(\n",
+    "        '../data/raw/dialogsum/dialogsum.test.jsonl', lines=True)[['dialogue', 'summary1']]\n",
+    "    test.columns = ['dialogue', 'summary']\n",
+    "    test['summary'] = test['summary'].apply(\n",
+    "        lambda x: '<SOS> ' + x + ' <EOS>')\n",
+    "\n",
+    "    test_corpus = test.apply(combine_columns, axis=1)\n",
+    "    test_corpus = list(map(tokenize, corpus))\n",
+    "    test_corpus = '\\n'.join(corpus)\n",
+    "\n",
+    "    corpus.extend(dev_corpus)\n",
+    "    corpus.extend(test_corpus)\n",
+    "\n",
+    "    with open(\"../data/processed/glove_corpus\", \"w\") as f:\n",
+    "        f.write(corpus)"
    ]
   }
  ],
