--- a/notebooks/BART.ipynb
+++ b/notebooks/BART.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "5nSnN4XGEjYL",
         "outputId": "9a8ba467-133b-4ab8-a5f6-c8fb308db4fa",
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "rlomHNLgEr58"
       },
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "PSPo2T-zFVYc"
       },
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "VeB8HXv0FdW3"
       },
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "q5LHSdrUFlFU"
       },
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "03f3eDCKFmlh"
       },
@@ -429,16 +429,22 @@
       "source": [
         "from transformers import TrainingArguments, Trainer\n",
         "\n",
+        "batch_size = 16\n",
         "training_args = TrainingArguments(\n",
         "    output_dir = 'bart_diasum',\n",
         "    num_train_epochs=3,\n",
-        "    learning_rate=0.0001,\n",
+        "    learning_rate=3e-5,\n",
         "    warmup_steps = 500,\n",
-        "    per_device_train_batch_size=4,\n",
-        "    per_device_eval_batch_size=4,\n",
+        "    per_device_train_batch_size=batch_size,\n",
+        "    per_device_eval_batch_size=batch_size,\n",
+        "    predict_with_generate = True,\n",
+        "    fp16=True,\n",
+        "    metric_for_best_model=\"eval_rouge1\",\n",
+        "    greater_is_better=True,\n",
         "    weight_decay = 0.01,\n",
         "    logging_steps = 0.1,\n",
         "    evaluation_strategy = 'steps',\n",
+        "    seed=42,\n",
         "    eval_steps=50,\n",
         "    save_steps=1e6,\n",
         "    gradient_accumulation_steps=16,\n",
@@ -451,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -568,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "vNpdhu_FFuzN"
       },
